--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="FR">
+<html lang="DEFAULT">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design lyon, agence design">
-    <meta name="description" content="">
+    <meta name="description" content="La Panthère, l'agence de Webdesign à Lyon. Vente de solutions Web en ligne.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
