--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="Création site web, création site internet, agence Webdesign Lyon">
-    <meta name="description" content="">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="description" content="La Panthère, agence de Webdesign à Lyon. Spécialiste vente en ligne de solutions web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
