--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="default">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="Création site web, création site internet, agence Webdesign Lyon">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -29,7 +29,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<!-- <div class="page-container"> -->
     
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
@@ -151,10 +151,10 @@
 
 <!-- bloc-4-portfolio -->
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-	<div class = "container bloc-lg">
-		<div class = "row">
+	<div class="container bloc-lg">
+		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src = "img/title2.png" />
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -298,3 +298,4 @@
 
 </body>
 </html>
+
