--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a class = "liens_nav" href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a class = "liens_nav" href="page2.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
