--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<li>
 					</li>
 					<li>
-						<a class = "liens_nav" href="page2.html">page2 &gt;</a>
+						<a class = "liens_nav" href="page2.html">page2</a>
 					</li>
 				</ul>
 			</div>
